add: codec polish